--- a/templates/menu.html
+++ b/templates/menu.html
@@ -15,9 +15,9 @@
 		</header>
 		<div class="mui-content">
 		        <ul class="mui-table-view mui-grid-view mui-grid-9">
-		            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('switchs')}}">
+		            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('rooms')}}">
 		                    <span class="mui-icon mui-icon-home"></span>
-		                    <div class="mui-media-body">开关</div></a></li>
+		                    <div class="mui-media-body">房间</div></a></li>
 		            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('music')}}">
 		                    <span class="mui-icon mui-icon-email"></span>
 		                    <div class="mui-media-body">音乐</div></a></li>
@@ -28,6 +28,9 @@
 					<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('user')}}">
 		                    <span class="mui-icon mui-icon-chatbubble"></span>
 		                    <div class="mui-media-body">用户</div></a></li>
+					<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('devices')}}">
+		                    <span class="mui-icon mui-icon-home"></span>
+		                    <div class="mui-media-body">设备</div></a></li>
 					{% endif %}
 		        </ul>
 		</div>
