--- a/templates/devices.html
+++ b/templates/devices.html
@@ -6,7 +6,7 @@
 		<title></title>
 		<script src="{{url_for('static',filename='js/mui.min.js')}}"></script>
 		<link href="{{url_for('static',filename='css/mui.min.css')}}" rel="stylesheet" />
-	</head> 
+	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
@@ -32,7 +32,7 @@
 			<p style="width:100%;text-align:center">添加设备</p>
 			<div class="mui-input-row">
 				<label>名称</label>
-				<input id="d_name" type="text" class="mui-input-clear" placeholder="请输入用户名">
+				<input id="d_name" type="text" class="mui-input-clear" placeholder="请输入名称">
 			</div>
 			<div class="mui-input-row">
 				<label>编码</label>
