--- a/static/css/music.css
+++ b/static/css/music.css
@@ -1,7 +1,7 @@
 /* Basic */
 *, *:before, *:after { box-sizing: border-box; }
 body { margin: 0; min-height: 100%; background: #EEE; font-family: 'Roboto Condensed', sans-serif; font-weight: 300; }
-a { color: #FFF; text-decoration: none; }
+/*a { color: #FFF; text-decoration: none; }*/
 a:hover { color: #26C5CB; }
 p { margin: 0; }
 .credits { position: absolute; left: 20px; bottom: 20px; color: #ccc; font-size: 14px; }
@@ -140,7 +140,7 @@ button:hover {
 .song,
 .author,
 .playlist a {
-	  white-space: nowrap; 
+	  white-space: nowrap;
 	  overflow: hidden;
 	  text-overflow: ellipsis;
 }
@@ -150,7 +150,7 @@ input[type='range'] {
 	  display: block;
 	  margin: 14px auto;
 	  width: 200px;
-  height: 2px; 
+  height: 2px;
 	  outline: 0;
 	  cursor: pointer;
 	  box-shadow: 1px 1px 3px 0 #000;
@@ -187,7 +187,7 @@ label {
 .to-lyrics-label:hover {
 	  color: #26C5CB;
 }
-	
+
 label:active,
 label:focus {
 	  top: 0;
@@ -202,7 +202,7 @@ label.to-back-label {
 	  height: 30px;
 	  margin-left: -15px;
 	  color: #fff;
-	  text-align: center;	
+	  text-align: center;
 	  cursor: pointer;
 	  z-index: 500;
 }
@@ -279,7 +279,7 @@ label.to-lyrics-label {
 	  color: #fff;
 	  text-align: center;
 	  font-size: 9px;
-	  font-weight: bold; 
+	  font-weight: bold;
 	  text-shadow: 1px 1px 3px #000;
 }
 
