--- a/templates/menu.html
+++ b/templates/menu.html
@@ -24,14 +24,17 @@
 		            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('speaker')}}">
 		                    <span class="mui-icon mui-icon-mic"></span>
 		                    <div class="mui-media-body">喊话</div></a></li>
-					{% if user_type == 1%}
-					<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('user')}}">
-		                    <span class="mui-icon mui-icon-person"></span>
-		                    <div class="mui-media-body">用户</div></a></li>
-					<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('devices')}}">
-		                    <span class="mui-icon mui-icon-gear"></span>
-		                    <div class="mui-media-body">设备</div></a></li>
-					{% endif %}
+								{% if user_type == 1%}
+								<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('user')}}">
+					                    <span class="mui-icon mui-icon-person"></span>
+					                    <div class="mui-media-body">用户</div></a></li>
+								<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('devices')}}">
+					                    <span class="mui-icon mui-icon-gear"></span>
+					                    <div class="mui-media-body">设备</div></a></li>
+								{% endif %}
+								<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('index')}}">
+									<span class="mui-icon mui-icon-undo"></span>
+									<div class="mui-media-body">登出</div></a></li>
 		        </ul>
 		</div>
 	</body>
