--- a/templates/menu.html
+++ b/templates/menu.html
@@ -15,26 +15,22 @@
 		</header>
 		<div class="mui-content">
 		        <ul class="mui-table-view mui-grid-view mui-grid-9">
-		            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('rooms')}}">
+		            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('rooms_config')}}">
 		                    <span class="mui-icon mui-icon-home"></span>
 		                    <div class="mui-media-body">房间</div></a></li>
-		            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('music')}}">
+		           <!--  <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('music')}}">
 		                    <span class="mui-icon mui-icon-spinner mui-spin"></span>
 		                    <div class="mui-media-body">音乐</div></a></li>
 		            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('speaker')}}">
 		                    <span class="mui-icon mui-icon-mic"></span>
 		                    <div class="mui-media-body">喊话</div></a></li>
-								{% if user_type == 1%}
 								<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('user')}}">
 					                    <span class="mui-icon mui-icon-person"></span>
-					                    <div class="mui-media-body">用户</div></a></li>
+					                    <div class="mui-media-body">用户</div></a></li> -->
 								<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('devices')}}">
 					                    <span class="mui-icon mui-icon-gear"></span>
 					                    <div class="mui-media-body">设备</div></a></li>
-								{% endif %}
-								<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="{{url_for('index')}}">
-									<span class="mui-icon mui-icon-undo"></span>
-									<div class="mui-media-body">登出</div></a></li>
+
 		        </ul>
 		</div>
 	</body>
